--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Index", "ConfigurarAmbiente", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "ConfigurarAmbiente", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
