buscando responsavel tecnico de uma unidade de infraestrutura

--- a/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
@@ -151,7 +151,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.ListRelato.aaData)
+                                    @*@foreach (var item in Model.ListRelato.aaData)
                                     {
                                         <tr>
                                             <td>@Html.DisplayFor(modelItem => item.NumRelato)</td>
@@ -181,7 +181,7 @@
                                                    class="on-default edit-row color" style='color:#777777'><i class="fa fa-users"></i></a>
                                             </td>
                                         </tr>
-                                    }
+                                    }*@
                                 </tbody>
                             </table>
 
