--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model Infraero.Relprev.Application.ConfigurarAmbiente.Queries.GetConfigurarAmbientes.ConfigurarAmbienteDto
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 
 <div class="row">
     <div class="col-lg-12">
@@ -31,24 +29,28 @@
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnico</label>
                         <div class="col-lg-3">
-                            <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3" />
+                            <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" value="@Model.ParecerTecnico"
+                                   placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3" />
                         </div>
 
                         <label class="col-lg-2 control-label text-lg-right pt-2">Devolvido para Complemento<span class="required">*</span></label>
                         <div class="col-lg-3 pull-left">
-                            <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control" placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="3" />
+                            <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control" value="@Model.DevolvidoParaComplemento"
+                                   placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="3" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Tempo de Notificação (e-mail) para Responder Parecer Técnico<span class="required">*</span></label>
                         <div class="col-lg-3">
-                            <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control" placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="3" />
+                            <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control" value="@Model.TempoNotificacaoParaResponder"
+                                   placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="3" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Texto Descritivo para Motivo de Cancelamento <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" id="TextoMotivoCancelamento" name="TextoMotivoCancelamento" class="form-control" placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000"></textarea>
+                            <textarea type="text" rows="3" id="TextoMotivoCancelamento" name="TextoMotivoCancelamento" class="form-control"
+                                      placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000">@Model.TextoMotivoCancelamento</textarea>
                         </div>
                     </div>
                 </div>
@@ -99,7 +101,7 @@
                     type: 'error'
                 });
             }
-            
+
         }).apply(this, [jQuery]);
 
         // Tooltip
